# contact-matrix-generator

./: .gitignore  .travis.yml  README.md  main.py  matrix.npy  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
contact_matrix_generator/: generate_contact_matrix.py
tests/: test.cif  test_generate_contact_matrix.py
