[metadata]
name = contact_matrix_generator
author = Mihaly Varadi
author_email = mvaradi@ebi.ac.uk
description = Lightweight tool to generate C-alpha contact matrices
version = attr: __version__.__version__
url = https://github.com/mvaradi/contact-matrix-generator
keywords =
  starter
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Life Science/Structural Biology
  Intended Audience :: Developers
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.7
packages = find_namespace:
zip_safe: False
include_package_data = True
install_requires =
  requests

[options.extras_require]
test =
  pytest

[options.entry_points]
console_scripts =
  cmg = contact_matrix_generator.generate_contact_matrix:main
